@@ -27,8 +27,9 @@ kmk_DEFS = \
 	CONFIG_NO_DEFAULT_SUFFIX_RULES \
 	CONFIG_NO_DEFAULT_VARIABLES \
 	CONFIG_WITH_EXTENDED_NOTPARALLEL \
-    CONFIG_WITH_INCLUDEDEP \
+	CONFIG_WITH_INCLUDEDEP \
 	CONFIG_WITH_TOUPPER_TOLOWER \
+	CONFIG_PRETTY_COMMAND_PRINTING \
 	KMK \
 	\
 	KMK_HELPERS \
